<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".ColorScreen" android:gravity="center">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <TextView android:id="@+id/fullscreen_content" android:layout_width="match_parent"
        android:layout_height="match_parent" android:keepScreenOn="true" android:textColor="#00ff00"
        android:textStyle="bold" android:textSize="50sp" android:gravity="center"
        android:text="" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:touchscreenBlocksFocus="false"
        android:clickable="false">

        <LinearLayout android:id="@+id/fullscreen_content_controls"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay" android:orientation="horizontal"
            tools:ignore="UselessParent">

        </LinearLayout>

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/imageView"
            android:layout_gravity="right|top"/>

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/imageView2"
            android:layout_gravity="top|left"/>

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/imageView3"
            android:layout_gravity="left|bottom"/>

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/imageView4"
            android:layout_gravity="right|bottom"/>

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/imageView5"
            android:layout_gravity="center"/>

    </FrameLayout>


</FrameLayout>
